# Direct3D12Renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: Camera.h  FrameResource.h  MathHelper.h  Model.h  ModelLoader.h  Pipeline.h  Renderer.h  ShaderCompiler.h  UploadBuffer.h  Vertex.h
shaders/: GeometryPass.hlsl  LightingPass.hlsl  LightingUtil.hlsl  PostProcessingPass.hlsl  ShadowPass.hlsl  color.hlsl  pixel_shader.hlsl  vertex_shader.hlsl
src/: Camera.cpp  FrameResource.cpp  Model.cpp  ModelLoader.cpp  Pipeline.cpp  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  main.cpp
